--- a/src/presentation/pages/login/style.scss
+++ b/src/presentation/pages/login/style.scss
@@ -25,6 +25,14 @@
 
     .submit {
       margin-top: 32px;
+
+      &:disabled {
+        background-color: $disabled;
+        color: $disabledTextColor;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
 
     .link {
